--- a/DialogForms.Components/Components/Dialog.razor
+++ b/DialogForms.Components/Components/Dialog.razor
@@ -1,81 +1,57 @@
 ﻿@inject IJSRuntime JsRuntime
 @inject IModalService ModalService
-@using DialogForms.Components.Enums
-@implements IDisposable
-<div class="modal fade @(IsVisible ? "show d-block" : "")" tabindex="-1"
+
+<div aria-hidden="@(IsVisible ? "false" : "true")"
+     class="modal fade @(IsVisible ? "show d-block" : "")"
+     data-bs-backdrop="@(IsBackdropStatic ? "static" : "true")"
+     data-bs-keyboard="false"
+     @ref="ModalElement"
      style="@(IsVisible ? "display:block;" : "display:none;")"
-     aria-hidden="@(IsVisible ? "false" : "true")"
-     data-bs-backdrop="static"
-     @ref="ModalElement">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" @onclick:stopPropagation="true">
-        <div class="modal-content">
-            <div class="modal-header">
+     tabindex="-1">
+
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+         @onclick:stopPropagation="true">
+
+        <div class="modal-content"
+             id="modal-content">
+            <div>
+                <DialogHeader ActionType="@ActionType"
+                              OnCloseClick="HideAsync"
+                              Title="@Title">
+                </DialogHeader>
+            </div>
+
+            <div>
                 @{
-                    if (!string.IsNullOrEmpty(Title))
+                    if (IsLoading)
                     {
-                        <h5 class="modal-title">@Title</h5>
+                        <div class="d-flex justify-content-center p-4">
+                            <div class="spinner-border text-primary"
+                                 role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <DialogBody ChildComponent="@ChildComponent"
+                                    Parameters="@Parameters">
+                        </DialogBody>
                     }
                 }
-                <button type="button" class="btn-close" aria-label="Close" @onclick="HideAsync"></button>
             </div>
-            <div class="modal-body">
-                @{
-                    if (ChildComponent is not null)
-                    {
-                        <DynamicComponent Type="@ChildComponent" Parameters="@Parameters" />
-                    }
-                    else if (!string.IsNullOrEmpty(Message))
-                    {
-                        <p>@Message</p>
-                    }
+            @{
+                if (ShowFooter)
+                {
+                    <div>
+                        <DialogFooter>
+                            <FooterTemplate>
+                                <ActionButton ButtonType="@(ButtonType)"></ActionButton>
+                            </FooterTemplate>
+                        </DialogFooter>
+                    </div>
                 }
-            </div>
-            <div class="modal-footer">
-                <div class="dialog-footer">
-                    @{
-                        switch (EventType)
-                        {
-                            case EventTypes.Ok:
-                                <button type="button" @onclick="@ModalOk" class="btn btn-primary" title="Close">
-                                    <span class="bi-x-square"></span>
-                                </button>
-                                break;
-
-                            case EventTypes.OkCancel:
-                                <button type="button" @onclick="@ModalCancel" class="btn btn-primary" autofocus title="Close">
-                                    <span class="bi-x-square"></span>
-                                </button>
-                                <button type="button" @onclick="@ModalOk" class="btn btn-success" title="Save">
-                                    <span class="bi-floppy"></span>
-                                </button>
-                                break;
-
-                            case EventTypes.SaveCancel:
-                                <button type="button" @onclick="@ModalCancel" class="btn btn-primary" autofocus title="Close">
-                                    <span class="bi-x-square"></span>
-                                </button>
-                                <button type="button" @onclick="@ModalOk" form="AddOrEditForm" class="btn btn-success" title="Save">
-                                    <span class="bi-floppy"></span>
-                                </button>
-                                break;
-
-                            case EventTypes.DeleteCancel:
-                                <button type="button" @onclick="@ModalCancel" class="btn btn-primary" autofocus title="Close">
-                                    <span class="bi-x-square"></span>
-                                </button>
-                                <button type="button" @onclick="@ModalOk" class="btn btn-danger" title="Delete">
-                                    <span class="bi-trash"></span>
-                                </button>
-                                break;
-                            case EventTypes.Cancel:
-                                <button type="button" @onclick="@HideAsync" class="btn btn-primary" title="Close">
-                                    <span class="bi-x-square"></span>
-                                </button>
-                                break;
-                        }
-                    }
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
