--- a/DialogForms/Components/Layout/MainLayout.razor
+++ b/DialogForms/Components/Layout/MainLayout.razor
@@ -6,8 +6,11 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="px-4 top-row">
+            <a href="https://learn.microsoft.com/aspnet/core/"
+               target="_blank">
+                About
+            </a>
         </div>
 
         <article class="content px-4">
@@ -16,8 +19,12 @@
     </main>
 </div>
 
-<div id="blazor-error-ui" data-nosnippet>
+<div data-nosnippet
+     id="blazor-error-ui">
     An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
+    <a class="reload"
+       href=".">
+        Reload
+    </a>
     <span class="dismiss">🗙</span>
 </div>
