--- a/DialogForms/Components/Layout/NavMenu.razor
+++ b/DialogForms/Components/Layout/NavMenu.razor
@@ -1,30 +1,45 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<div class="navbar navbar-dark ps-3 top-row">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">DialogForms</a>
+        <a class="navbar-brand"
+           href="">
+            DialogForms
+        </a>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<input class="navbar-toggler"
+       title="Navigation menu"
+       type="checkbox" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
+<div class="nav-scrollable"
+     onclick="document.querySelector('.navbar-toggler').click()">
+    <nav class="flex-column nav">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link"
+                     href=""
+                     Match="NavLinkMatch.All">
+                <span aria-hidden="true"
+                      class="bi bi-house-door-fill-nav-menu">
+                </span> Home
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link"
+                     href="counter">
+                <span aria-hidden="true"
+                      class="bi bi-plus-square-fill-nav-menu">
+                </span> Counter
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link"
+                     href="weather">
+                <span aria-hidden="true"
+                      class="bi bi-list-nested-nav-menu">
+                </span> Weather
             </NavLink>
         </div>
     </nav>
 </div>
-
