Enhance modal functionality and add customer management
- Updated ActionButton to use submit type for form buttons.
- Simplified ActionButton interface by removing unused parameters.
- Enhanced Dialog component with new templates for flexible rendering.
- Improved modal visibility management and state handling in Dialog.
- Added loading spinner functionality in DialogBody.
- Made DialogFooter conditional based on ShowFooter property.
- Set default values for IsDraggable and IsResizable in ModalOption.
- Changed OnHide event signature for asynchronous handling in modal services.
- Removed makeModalResizable function from JavaScript interop.
- Added DialogForms.Models project reference to the solution.
- Revamped Home layout to display customer data in a table.
- Updated _Imports.razor with new namespaces for models and services.
- Created CustomerModel with validation attributes for customer data.
- Implemented Customer.razor for adding and editing customer information.
- Managed customer form logic in Customer.razor.cs.
- Developed CustomerService for managing customer data and state changes.

--- a/DialogForms.Components/Components/ActionButton.razor
+++ b/DialogForms.Components/Components/ActionButton.razor
@@ -5,7 +5,7 @@
             <button class="btn btn-primary"
                     @onclick="@OkButtonClick"
                     title="Close"
-                    type="button">
+                    type="submit">
                 <span class="bi-x-square"></span>
             </button>
             break;
@@ -21,7 +21,7 @@
             <button class="btn btn-success"
                     @onclick="@OkButtonClick"
                     title="Save"
-                    type="button">
+                    type="submit">
                 <span class="bi-floppy"></span>
             </button>
             break;
@@ -38,7 +38,7 @@
                     form="AddOrEditForm"
                     @onclick="@OkButtonClick"
                     title="Save"
-                    type="button">
+                    type="submit">
                 <span class="bi-floppy"></span>
             </button>
             break;
