--- a/DialogForms/Components/_Imports.razor
+++ b/DialogForms/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using DialogForms.Components
 @using DialogForms.Components.Components
 @using DialogForms.Components.Enums
+@using DialogForms.Components.Pages.Masters
+@using DialogForms.Services
