Add Yes/No confirmation dialog and modal enhancements
- Introduced "Yes/No" button type in ActionButton for confirmation.
- Added ShowBody and ModalSize parameters in Dialog for better control.
- Updated DialogBody to conditionally render based on ShowBody.
- Extended ButtonTypes enum to include YesNo option.
- Modified ModalOption class to support ShowBody and ModalSize.
- Implemented ShowConfirmationAsync method in IModalService.
- Updated ModalService to handle confirmation dialog logic.
- Refactored Home.razor to use confirmation dialog for deletions.
- Added EnumExtensions for converting ModalSize to CSS classes.
- Introduced ModalSize enum for flexible modal sizing options.

--- a/DialogForms.Components/Components/ActionButton.razor
+++ b/DialogForms.Components/Components/ActionButton.razor
@@ -1,4 +1,5 @@
-﻿@{
+﻿@inject IModalService ModalService
+@{
     switch (ButtonType)
     {
         case ButtonTypes.Ok:
@@ -64,6 +65,21 @@
                     title="Close"
                     type="button">
                 <span class="bi-x-square"></span>
+            </button>
+            break;
+        case ButtonTypes.YesNo:
+            <button autofocus
+                    class="btn btn-primary"
+                    @onclick="@OnYesClicked"
+                    title="Close"
+                    type="button">
+                <span class="bi-x-square"></span>
+            </button>
+            <button class="btn btn-danger"
+                    @onclick="@OnNoClicked"
+                    title="Delete"
+                    type="button">
+                <span class="bi-trash"></span>
             </button>
             break;
     }
