--- a/DialogForms/Components/Pages/Home.razor
+++ b/DialogForms/Components/Pages/Home.razor
@@ -19,36 +19,36 @@
             <div class="col-9">
                 <table class="table table-bordered">
                     <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Email</th>
-                        <th>Phone Number</th>
-                        <th>City</th>
-                        <th>Actions</th>
-                    </tr>
+                        <tr>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Email</th>
+                            <th>Phone Number</th>
+                            <th>City</th>
+                            <th>Actions</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    @foreach (var customer in Customers)
-                    {
-                        <tr>
-                            <td>@customer.FirstName</td>
-                            <td>@customer.LastName</td>
-                            <td>@customer.Email</td>
-                            <td>@customer.PhoneNumber</td>
-                            <td>@customer.City</td>
-                            <td>
-                                <button class="btn btn-primary btn-sm"
-                                        @onclick="() => OnUpdateClick(customer)">
-                                    Update
-                                </button>
-                                <button class="btn btn-danger btn-sm"
-                                        @onclick="() => OnDeleteClick(customer)">
-                                    Delete
-                                </button>
-                            </td>
-                        </tr>
-                    }
+                        @foreach (var customer in Customers)
+                        {
+                            <tr>
+                                <td>@customer.FirstName</td>
+                                <td>@customer.LastName</td>
+                                <td>@customer.Email</td>
+                                <td>@customer.PhoneNumber</td>
+                                <td>@customer.City</td>
+                                <td>
+                                    <button class="btn btn-primary btn-sm"
+                                            @onclick="() => OnUpdateClick(customer)">
+                                        Update
+                                    </button>
+                                    <button class="btn btn-danger btn-sm"
+                                            @onclick="() => OnDeleteClick(customer)">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
@@ -68,35 +68,46 @@
     private async Task AddCustomer()
     {
         await ModalService.ShowAsync(new()
-        {
-            Title = "Customer",
-            ChildComponent = typeof(Customer),
-            Parameters = new()
+            {
+                Title = "Customer",
+                ChildComponent = typeof(Customer),
+                Parameters = new()
             {
                 { "ButtonType", ButtonTypes.OkCancel },
-                { "ActionType", ActionType.Add }
-            },
-            ActionType = ActionType.Add
-        });
+                { "ActionType", ActionType.Add },
+                },
+                ActionType = ActionType.Add,
+                ModalSize = ModalSize.ExtraLarge,
+                ShowBody = true
+            });
     }
 
     private async Task OnUpdateClick(CustomerModel customer)
     {
         await ModalService.ShowAsync(new()
-        {
-            Title = "Customer",
-            ChildComponent = typeof(Customer),
-            Parameters = new()
+            {
+                Title = "Customer",
+                ChildComponent = typeof(Customer),
+                Parameters = new()
             {
                 { "ButtonType", ButtonTypes.OkCancel },
                 { "Context", customer },
                 { "ActionType", ActionType.Update }
             },
-            ActionType = ActionType.Update
-        });
+                ActionType = ActionType.Update,
+                ModalSize = ModalSize.ExtraLarge,
+                ShowBody = true
+            });
     }
 
-    private void OnDeleteClick(CustomerModel customer) { CustomerDataService.DeleteCustomer(customer.Id); }
+    private async Task OnDeleteClick(CustomerModel customer)
+    {
+        var result = await ModalService.ShowConfirmationAsync("Confirmation", "Are you sure you want to delete this item?");
+        if (result)
+        {
+            CustomerDataService.DeleteCustomer(customer.Id);
+        }
+    }
 
     public void Dispose() { CustomerDataService.OnChange -= StateHasChanged; }
 
