--- a/DialogForms.Components/Components/Dialog.razor
+++ b/DialogForms.Components/Components/Dialog.razor
@@ -8,7 +8,7 @@
      @ref="ModalElement"
      tabindex="-1">
 
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl"
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable @ModalSize"
          @onclick:stopPropagation="true">
         <div class="modal-content"
              id="modal-content">
@@ -20,6 +20,7 @@
             <DialogBody BodyTemplate="@BodyTemplate"
                         ChildComponent="@ChildComponent"
                         IsLoading="@IsLoading"
+                        ShowBody="@ShowBody"
                         Parameters="@Parameters">
             </DialogBody>
             <DialogFooter ButtonType="@ButtonType"
