Update ActionButton event handlers and parameters
Changed the `@onclick` event handler for the primary button in the `ActionButton` component from `@CancelButtonClick` to `@OnNoClicked` for `OkCancel`, `SaveCancel`, `DeleteCancel`, and `Cancel` button types. This change alters the button click behavior.

Removed the `CancelButtonClick` parameter from the `ActionButton` in `Customer.razor`, indicating a potential shift in how form resets are handled, while keeping the `OkButtonClick` functionality intact.

--- a/DialogForms.Components/Components/ActionButton.razor
+++ b/DialogForms.Components/Components/ActionButton.razor
@@ -14,7 +14,7 @@
         case ButtonTypes.OkCancel:
             <button autofocus
                     class="btn btn-primary"
-                    @onclick="@CancelButtonClick"
+                    @onclick="@OnNoClicked"
                     title="Close"
                     type="button">
                 <span class="bi-x-square"></span>
@@ -30,7 +30,7 @@
         case ButtonTypes.SaveCancel:
             <button autofocus
                     class="btn btn-primary"
-                    @onclick="@CancelButtonClick"
+                    @onclick="@OnNoClicked"
                     title="Close"
                     type="button">
                 <span class="bi-x-square"></span>
@@ -47,7 +47,7 @@
         case ButtonTypes.DeleteCancel:
             <button autofocus
                     class="btn btn-primary"
-                    @onclick="@CancelButtonClick"
+                    @onclick="@OnNoClicked"
                     title="Close"
                     type="button">
                 <span class="bi-x-square"></span>
@@ -61,7 +61,7 @@
             break;
         case ButtonTypes.Cancel:
             <button class="btn btn-primary"
-                    @onclick="@CancelButtonClick"
+                    @onclick="@OnNoClicked"
                     title="Close"
                     type="button">
                 <span class="bi-x-square"></span>
